src/components/Navbar/Navbar.css
/* fancy button animation (credits: some codepen) */
.box {
  position: relative;
  vertical-align: middle;
  color: white;
  display: inline-block;
  height: 40px;
  line-height: 35px;
  text-align: center;
  transition: 0.5s;
  padding: 0 20px;
  cursor: pointer;
  border: 2px solid transparent;
  transition: 0.5s;
}

.box:hover {
  color: var(--yellow);
}

.box::before,
.box::after {
  width: 100%;
  height: 100%;
  z-index: 3;
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  box-sizing: border-box;
  transform: scale(0);
  transition: 0.5s;
}

.foo::before {
  border-bottom: 1px solid var(--yellow);
  border-left: 1px solid var(--yellow);
  transform-origin: 100% 0%;
}

.foo::after {
  border-top: 1px solid var(--yellow);
  border-right: 1px solid var(--yellow);
  transform-origin: 0% 100%;
}

.box:hover::after,
.box:hover::before {
  transform: scale(1);
}

/* navbar  */
.navbar {
  text-align: center;
  background-color: #001121;
}

ul {
  list-style-type: none;
}

/* hide the somaiya logos in small screens */
@media only screen and (max-width: 500px) {
  .somaiya {
    display: none;
  }
}

/* right somaiya logos on medium screen */
@media only screen and (max-width: 1183px) {
  .right-wala-somaiya-logo {
    display: none;
  }
}
@media only screen and (max-width: 1055px) {
  .left-wala-somaiya-logo {
    display: none;
  }
}

/* handle overflowing nav items */
@media only screen and (max-width: 1335px) and (min-width: 993px) {
  /* expo */
  .truncate-expo {
    visibility: hidden;
  }
  .expo-nav-ka-dropdown-icon {
    display: none;
  }
  .truncate-expo::before {
    content: "Expos...";
    visibility: visible;
    display: block;
  }
  /* get-involved */
  .truncate-get-involved {
    visibility: hidden;
  }
  .truncate-get-involved::before {
    content: "Get...";
    visibility: visible;
    display: block;
  }
}

/* navbar drop down animation 
  credits: https://bootstrap-menu.com/detail-hover-animation.html */
@media all and (min-width: 992px) {
  .navbar .dropdown-menu-end {
    right: 0;
    left: auto;
  }
  .navbar .nav-item .dropdown-menu {
    display: block;
    opacity: 0;
    visibility: hidden;
    transition: 0.3s;
    margin-top: 0;
  }
  .navbar .nav-item:hover .nav-link {
    color: #fff;
  }
  .navbar .dropdown-menu.fade-down {
    top: 80%;
    transform: rotateX(-75deg);
    transform-origin: 0% 0%;
  }
  .navbar .dropdown-menu.fade-up {
    top: 180%;
  }
  .navbar .nav-item:hover .dropdown-menu {
    transition: 0.3s;
    opacity: 1;
    visibility: visible;
    top: 100%;
    transform: rotateX(0deg);
  }
}

